syntax = "proto3";

package dbc_service;

service DBCService {
    rpc ProcessFrames(stream FrameRequest) returns (stream FrameResponse);
}

message FrameRequest {
    string topic = 1;
    bytes payload = 2;
    int64 timestamp = 3;
}

message FrameResponse {
    bool success = 1;
    string data = 2;
    int32 device_address = 3;
    int32 can_message_id = 4;
    string error = 5;
}